--- a/example/webapp/style.css
+++ b/example/webapp/style.css
@@ -8,13 +8,13 @@
    
 .hitlink {
 	font-family:arial,sans-serif;
-	font-size: 12pt;
+	font-size: 10pt;
 	color: #36c
 }
 
 .frag {
 	font-family:arial,sans-serif;
-	font-size: 10pt;
+	font-size: 12pt;
 	}
 	
 .path {
@@ -27,6 +27,12 @@
 	font-family:arial,sans-serif;
 	color:#77c;
 	font-size: 10pt;
+}
+
+.user {
+    font-family:arial,sans-serif;
+    color:#009900;
+    font-size:10pt;
 }
 
 #resTable
